2003-12-25  Shiro Kawai  <shiro@acm.org>

	* cgi/kahua.cgi.in: refactored PATH_INFO processing, allowing
	  generated cgsid to be passed via kahua.cgi/$worker-type/$cgsid
	  format.

	* src/kahua/session.scm: changed cont-session table, so that
	  the same cont-id will be returned when "known closure" is passed
	  to session-cont-register.  This change allows global entry
	  (defined via define-entry) to be treated in the same way as
	  local closures.

	* src/kahua/html.scm (a/cont): due to the above changes, a/cont
	  is much simplified.
	  (define-entry): does not only add-entry!, but also defines
	  global named procedure.

	* examples/lambdabooks/*.kahua, test/acont.kahua: adapted to
	  above changes.

2003-12-26  Koichi Sasada <sasada@namikilab.tuat.ac.jp>

	* cgi/kahua.cgi.in: fix regexp miss.

	* src/kahua-spvr.in: change app-servers format,
	  and a directory rule of checkout directory.
	  remove ":script" keyword, add ":arguments" keyword,
	  location of type.kahua to work/checkout/type/type.kahua

2003-12-25  Koichi Sasada <sasada@namikilab.tuat.ac.jp>

	* cgi/kahua.cgi.in:
	  support connecting user independent kahua-spvr with
	  path-info. If "~user" is given, read ~user/.kahua/kahua.conf
	  and perform with this configuration.

2003-12-23  Shiro Kawai  <shiro@acm.org>

	* examples/lambdabooks.kahua
	(standard-page-cont, standard-frame-cont):
	fixed a couple of leftovers of type inconsistencies.

2003-12-23  Nobuo Yamashita <nobsun@sampou.org>

	* examples/lambdabooks.kahua:
	fixed type inconsistencies.

	* src/kahua/html.scm (interp-html, interp-html-rec):
	old interp-html renamed to interp-html-rec.
	interp-html redefined without cont arg.

	* test/*.kahua:
	modified corresponding change of interp-html.

2003-12-22  Shiro Kawai  <shiro@acm.org>

	* src/kahua/persistence.scm (kahua-db-open, kahua-db-close) :
	added lock mechanism using fcntl(2).  NB: this might cause a
	problem on platforms that don't support fcntl(2) record lock.
